Add delete and update bucket funcs

--- a/examples/aws-operator.yaml
+++ b/examples/aws-operator.yaml
@@ -71,6 +71,6 @@ spec:
         - name: AWS_REGION
           value: "us-east-1"
         - name: AWS_ACCESS_KEY_ID
-          value: "KEY"
+          value: "Key"
         - name: AWS_SECRET_ACCESS_KEY
           value: "ID"
